# UTTG

./: CMakeLists.txt  Dockerfile  README.md  example.py  imc-1.2.0.deb  setup.py
cmake/: Utilities.cmake
doc/: changelog.md
example/: test.py
include/imc/bot_servo/: ArmServoModeBase.h  ArmServoModeDirect.h  ArmServoModeInterpolation.h  ArmServoModeLinear.h  ArmServoModeTrajectory.h
include/imc/bot_servo/filter/: filter_base.hpp  filter_raw.hpp
interface/: CMakeLists.txt  interface_py.cpp
interface/include/imc/bot_servo/: ArmServoModeInterface.h
interface/src/: ArmServoModeInterface.cpp
src/: ArmServoModeBase.cpp  ArmServoModeDirect.cpp  ArmServoModeInterpolation.cpp  ArmServoModeLinear.cpp  ArmServoModeTrajectory.cpp
